--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body{
-  background-image:url("assets/background.jpg");
+  background-image:url("assets/background.jpeg");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
